objects/ssot__InsurancePolicy__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CancellationDateTime__c</fullName>
        <label>Cancellation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentDueAmount__c</fullName>
        <label>Current Due Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveDateTime__c</fullName>
        <label>Effective Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EmployerContributionAmount__c</fullName>
        <label>Employer Contribution Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDateTime__c</fullName>
        <label>Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAccountID__c</fullName>
        <label>Financial Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialPolicyTerm__c</fullName>
        <label>Financial Policy Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GrossWrittenPremiumAmount__c</fullName>
        <label>Gross Written Premium Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HasAnyAutoCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Any Auto Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Insurance Policy Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyChangeSubType__c</fullName>
        <label>Insurance Policy Change Sub Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyChangeType__c</fullName>
        <label>Insurance Policy Change Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyNumber__c</fullName>
        <label>Insurance Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyStatus__c</fullName>
        <label>Insurance Policy Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicySubStatus__c</fullName>
        <label>Insurance Policy Sub Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyType__c</fullName>
        <label>Insurance Policy Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsuredAmount__c</fullName>
        <label>Insured Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsLoanEligibile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is LoanEligibile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRenewedPolicy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Renewed Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextRenewalDateTime__c</fullName>
        <label>Next Renewal Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalEffectiveDateTime__c</fullName>
        <label>Original Effective Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalInsurancePolicyId__c</fullName>
        <label>Original Insurance Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PolicyCancellationReasonType__c</fullName>
        <label>Policy Cancellation Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PolicyPlanTier__c</fullName>
        <label>Policy Plan Tier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PolicyPlanType__c</fullName>
        <label>Policy Plan Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PolicyRenewalChannelType__c</fullName>
        <label>Policy Renewal Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PremiumAmount__c</fullName>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PremiumFrequency__c</fullName>
        <label>Premium Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PremiumPaymentType__c</fullName>
        <label>Premium Payment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousPremiumAmount__c</fullName>
        <label>Previous Premium Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousRenewalDateTime__c</fullName>
        <label>Previous Renewal Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryInsuredId__c</fullName>
        <label>Primary Insured</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryProducerId__c</fullName>
        <label>Primary Producer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorInsurancePolicy__c</fullName>
        <label>Prior Insurance Policy</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RenewalDateTime__c</fullName>
        <label>Renewal Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RenewalDeadlineDateTime__c</fullName>
        <label>Renewal Deadline Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SaleDateTime__c</fullName>
        <label>Sale Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServingOfficeAddress__c</fullName>
        <label>Serving Office Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceOpportunityId__c</fullName>
        <label>Source Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StandardFeeAmount__c</fullName>
        <label>Standard Fee Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StandardTaxAmount__c</fullName>
        <label>Standard Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxesSurchargesAmount__c</fullName>
        <label>Taxes Surcharges Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TermFeeAmount__c</fullName>
        <label>Term Fee Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TermPremiumAmount__c</fullName>
        <label>Term Premium Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCommissionAmount__c</fullName>
        <label>Total Commission Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalStandardAmount__c</fullName>
        <label>Total Standard Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTermFeeAmount__c</fullName>
        <label>Total Term Fee Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTermPremiumAmount__c</fullName>
        <label>Total Term Premium Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTermTaxAmount__c</fullName>
        <label>Total Term Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniversalPolicyIdentifier__c</fullName>
        <label>Universal Policy Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WritingCarrierAccountId__c</fullName>
        <label>Writing Carrier Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761237026_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsurancePolicy_FinancialAccountID_m_rel</label>
        <referenceTo>ssot__FinancialAccount__dlm</referenceTo>
        <relationshipLabel>InsurancePolicy_FinancialAccountID_m_rel</relationshipLabel>
        <relationshipName>rel_1697761237026_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>